// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. card default state 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={false}
      isReversed={false}
      showImage={true}
    >
      <div>
        <div>
          <TimesImage
            aspectRatio={0.6666666666666666}
            uri="https://img.io/img&resize=360"
          />
        </div>
        <div>
          <div>
            A card
          </div>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`2. pass an empty state to the image component 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={null}
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={false}
      isReversed={false}
      showImage={true}
    >
      <div>
        <div>
          <TimesImage
            aspectRatio={0.6666666666666666}
            uri=""
          />
        </div>
        <div>
          <div>
            A card with an empty image
          </div>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`3. card without an image when showimage is false 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={false}
      isReversed={false}
      showImage={false}
    >
      <div>
        <div>
          <div>
            No image
          </div>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`4. pass an empty state to the image component when uri is null 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": null,
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={false}
      isReversed={false}
      showImage={true}
    >
      <div>
        <div>
          <TimesImage
            aspectRatio={0.6666666666666666}
            uri=""
          />
        </div>
        <div>
          <div>
            No URI
          </div>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`5. card with reversed layout 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={false}
      isReversed={true}
      showImage={true}
    >
      <div>
        <div>
          <div>
            A card in reverse
          </div>
        </div>
        <div>
          <TimesImage
            aspectRatio={0.6666666666666666}
            uri="https://img.io/img&resize=360"
          />
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`6. card with reversed layout and no image 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={false}
      isReversed={true}
      showImage={false}
    >
      <div>
        <div>
          <div>
            A card in reverse with no image
          </div>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`7. card with a loading state 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={true}
      isReversed={false}
      showImage={true}
    >
      <div>
        <div>
          <TimesImage
            aspectRatio={0.6666666666666666}
            uri="https://img.io/img&resize=360"
          />
        </div>
        <div>
          <Component>
            <Gradient
              degrees={264}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
          </Component>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`8. card with a loading state and no image 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={true}
      isReversed={false}
      showImage={false}
    >
      <div>
        <div>
          <Component>
            <Gradient
              degrees={264}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
          </Component>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`9. card with reversed loading state 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={true}
      isReversed={true}
      showImage={true}
    >
      <div>
        <div>
          <Component>
            <Gradient
              degrees={264}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
          </Component>
        </div>
        <div>
          <TimesImage
            aspectRatio={0.6666666666666666}
            uri="https://img.io/img&resize=360"
          />
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`10. card with reversed loading state with no image 1`] = `
<indexweb__FadeIn>
  <div>
    <CardContent
      contentContainerClass=""
      image={
        Object {
          "uri": "https://img.io/img",
        }
      }
      imageContainerClass=""
      imageRatio={0.6666666666666666}
      imageSize={360}
      isLoading={true}
      isReversed={true}
      showImage={false}
    >
      <div>
        <div>
          <Component>
            <Gradient
              degrees={264}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
            <Gradient
              degrees={267}
            />
          </Component>
        </div>
      </div>
    </CardContent>
  </div>
</indexweb__FadeIn>
`;

exports[`11. card should not re-render when imageratio prop is changed 1`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "https://img.io/img",
      }
    }
    imageContainerClass=""
    imageRatio={0.6666666666666666}
    imageSize={360}
    isLoading={false}
    isReversed={false}
    showImage={true}
  >
    Do not re-render me
  </CardContent>
</indexweb__FadeIn>
`;

exports[`11. card should not re-render when imageratio prop is changed 2`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "https://img.io/img",
      }
    }
    imageContainerClass=""
    imageRatio={1.7777777777777777}
    imageSize={360}
    isLoading={false}
    isReversed={false}
    showImage={true}
  >
    Do not re-render me
  </CardContent>
</indexweb__FadeIn>
`;

exports[`12. card should re-render when image uri changes 1`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "https://img.io/img",
      }
    }
    imageContainerClass=""
    imageRatio={0.6666666666666666}
    imageSize={360}
    isLoading={false}
    isReversed={false}
    showImage={true}
  >
    Some text
  </CardContent>
</indexweb__FadeIn>
`;

exports[`12. card should re-render when image uri changes 2`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "http://foo",
      }
    }
    imageContainerClass=""
    imageRatio={0.6666666666666666}
    imageSize={360}
    isLoading={false}
    isReversed={false}
    showImage={true}
  >
    Some text
  </CardContent>
</indexweb__FadeIn>
`;

exports[`13. card should re-render when image size changes 1`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "https://img.io/img",
      }
    }
    imageContainerClass=""
    imageRatio={0.6666666666666666}
    imageSize={360}
    isLoading={false}
    isReversed={false}
    showImage={true}
  >
    Some content
  </CardContent>
</indexweb__FadeIn>
`;

exports[`13. card should re-render when image size changes 2`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "https://img.io/img",
      }
    }
    imageContainerClass=""
    imageRatio={0.6666666666666666}
    imageSize={null}
    isLoading={false}
    isReversed={false}
    showImage={true}
  >
    Some content
  </CardContent>
</indexweb__FadeIn>
`;

exports[`14. card should re-render when loading state changes 1`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "https://img.io/img",
      }
    }
    imageContainerClass=""
    imageRatio={0.6666666666666666}
    imageSize={360}
    isLoading={true}
    isReversed={false}
    showImage={true}
  >
    Re-render me
  </CardContent>
</indexweb__FadeIn>
`;

exports[`14. card should re-render when loading state changes 2`] = `
<indexweb__FadeIn>
  <CardContent
    contentContainerClass=""
    image={
      Object {
        "uri": "https://img.io/img",
      }
    }
    imageContainerClass=""
    imageRatio={0.6666666666666666}
    imageSize={360}
    isLoading={false}
    isReversed={false}
    showImage={true}
  >
    Re-render me
  </CardContent>
</indexweb__FadeIn>
`;
